config-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-app-service
  namespace: flussonic
  labels:
    name: config-app-service
spec:
  ports:
  - port: 8086
    targetPort: 8086
    name: http
  selector:
    app: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-app
  namespace: flussonic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      hostname: config-app
      subdomain: config-app-service
      containers:
      - name: config-app
        image: makaroshkj/config-app:8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8086
