flussonic-transcoder.yaml
apiVersion: v1
kind: Service
metadata:
  name: transcoder-service
  namespace: flussonic
  labels:
    name: transcoder-service
spec:
  ports:
  - protocol: TCP
    port: 8282
    targetPort: http
    name: http
  selector:
    app: dev
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transcoder
  namespace: flussonic
spec:
  serviceName: transcoder-service
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      hostname: transcoder
      subdomain: transcoder-service
      containers:
      - name: flussonic
        image: flussonic/flussonic:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8282
          hostPort: 8282
        volumeMounts:
        - name: config-templates
          mountPath: /etc/flussonic/flussonic.conf.d
        livenessProbe:
          httpGet:
            path: /streamer/api/v3/monitoring/liveness
            port: 8282
            httpHeaders:
            - name: Authorization
              value: $(FLUSSONIC_EDIT_AUTH)
          initialDelaySeconds: 10
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /flussonic/api/v3/monitoring/readiness
            port: 8282
            httpHeaders:
            - name: Authorization
              value: $(FLUSSONIC_EDIT_AUTH)
          initialDelaySeconds: 6
          periodSeconds: 6
          failureThreshold: 50
        readinessProbe:
          httpGet:
            path: /flussonic/api/v3/monitoring/readiness
            port: 8282
            httpHeaders:
            - name: Authorization
              value: $(FLUSSONIC_EDIT_AUTH)
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: config-templates
        configMap:
          name: streamer-presets
          items:
          - key: listeners
            path: listeners.conf
          - key: config_external_transcoder
            path: config_external.conf
