minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: flussonic
  labels:
    name: minio-service
spec:
  ports:
  - port: 9090
    targetPort: 9090
    name: minio-service
  selector:
    app: dev
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: dev
  name: minio
  namespace: flussonic
spec:
  serviceName: minio-service
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        ports:
        - name: http-minio
          containerPort: 9090
        command:
        - /bin/bash
        - -c
        args:
        - minio server /data --console-address :9090
        volumeMounts:
        - mountPath: /storage
          name: dvr-volume # Corresponds to the `spec.volumes` Persistent Volume
      volumes:
      - name: dvr-volume
        hostPath:
          path: /tmp/dvr
          type: DirectoryOrCreate
#  volumeClaimTemplates:
 # - metadata:
 #     name: dvr-volume
 #   spec:
 #     accessModes:
 #       - ReadWriteOnce
 #     storageClassName: standard
 #     resources:
 #       requests:
 #         storage: 10Gi
    
    #hostPath: # MinIO generally recommends using locally-attached volumes
    #  path: /Users/vladimir/Documents/k8s/flussonic-cluster/dvr # Specify a path to a local drive or volume on the Kubernetes worker node
    #  type: DirectoryOrCreate # The path to the last directory must exist
