flussonic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flussonic-ingress
  namespace: flussonic
spec:
  rules:
    - host: "PASTE REAL HOSTNAME OF THE SERVER"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingest-service
                port:
                  number: 1935
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transcoder-service
                port:
                  number: 8282
